# ConfigOrchestrator

./: .clang-tidy  .clangd  .gitmodules  CMakeLists.txt  README.en.md  README.md
docs/developers/: add_config.md  event_handler_zh.md
include/: controlpane.h  controlpanel.h
include/backend/: config_backend_base.h  config_factory.h  config_item_base.h  config_manager.h  config_registry.h  firewall_backend.h  firewall_config.h  package_config.h  package_manager_backend.h
include/backend/firewall/: firewall_backend.h  firewall_context.h  firewall_tab_chain.h  rule_request.h
include/backend/package_manager/: package_manager_backend.h
include/frontend/: firewall_config.h  main_menu.h  package_config.h  ui_base.h
include/frontend/firewall/: chain_request.h  firewall_config.h  firewall_ui.h  rule_request.h
include/frontend/package_manager/: package_config.h  package_ui.h
include/tools/: cplog.h  iptools.h  log.h  nettools.h  sys.h  uitools.h  widget_manager.h
scripts/: cloc.sh
src/: controlpane.cc  controlpanel.cc  main.cc
src/backend/: config_backend_base.cc  config_item_base.cc  config_manager.cc  config_registry.cc  firewall_backend.cc  firewall_config.cc  package_config.cc
src/backend/firewall/: firewall_backend.cc  firewall_tab_chain.cc  rule_request.cc
src/backend/package_manager/: package_manager_backend.cc
src/frontend/: main_menu.cc  ui_base.cc
src/frontend/firewall/: firewall_config.cc  firewall_ui.cc
src/frontend/package_manager/: package_config.cc  package_ui.cc
src/tools/: iptools.cc  nettools.cc  sys.cc  uitools.cc  widget_manager.cc
test/: CMakeLists.txt
test/backend/: CMakeLists.txt  firewall_backend_test.cc  package_manager_test.cc
test/backend/firewall/: firewall_backend_test.cc
test/backend/package_manager/: package_manager_test.cc
